--- a/index.html
+++ b/index.html
@@ -90,5 +90,7 @@
             </div>
         </div>
     </div>
+  <script src="/js/data.js"></script>
+  <script src="/js/main.js"></script>
 </body>
 </html>
